Fixed width overflow issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ body {
     background-size: cover;
     background-position: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     color: #2b2d2f;
 }
